--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.jimtrency.lh.lhandroidframe.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <com.jimtrency.lh.lhandroidframe.wdiget.NoScrollViewPager
+      android:id="@+id/main_viwepage"
+      android:layout_marginBottom="50dp"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+  </com.jimtrency.lh.lhandroidframe.wdiget.NoScrollViewPager>
+
+  <com.jimtrency.lh.lhandroidframe.wdiget.MainBottom
+      android:layout_alignParentBottom="true"
+      android:id="@+id/main_bottom"
+      android:layout_width="match_parent"
+      android:layout_height="50dp">
+
+  </com.jimtrency.lh.lhandroidframe.wdiget.MainBottom>
+
+</RelativeLayout>
