--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-   <com.jimtrency.lh.lhandroidframe.widget.webview.X5Webview
+   <com.jimtrency.lh.lhandroidframe.wdiget.webview.X5Webview
        android:id="@+id/x5webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
-   </com.jimtrency.lh.lhandroidframe.widget.webview.X5Webview>
+   </com.jimtrency.lh.lhandroidframe.wdiget.webview.X5Webview>
 </RelativeLayout>
